--- a/UF1_Proyecto_compose/app/src/main/AndroidManifest.xml
+++ b/UF1_Proyecto_compose/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.UF1_Proyecto_compose"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.screens.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.UF1_Proyecto_compose">
