--- a/UF1_Proyecto_compose/app/src/main/AndroidManifest.xml
+++ b/UF1_Proyecto_compose/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:windowSoftInputMode="adjustResize"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UF1_Proyecto_compose"
@@ -18,7 +19,6 @@
         <activity
             android:name=".presentation.screens.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.UF1_Proyecto_compose">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
