--- a/UF1_Proyecto_compose/app/src/main/AndroidManifest.xml
+++ b/UF1_Proyecto_compose/app/src/main/AndroidManifest.xml
@@ -11,11 +11,14 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:windowSoftInputMode="adjustResize"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UF1_Proyecto_compose"
+        android:windowSoftInputMode="adjustResize"
         tools:targetApi="31">
+        <activity
+            android:name=".presentation.AuthActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.screens.MainActivity"
             android:exported="true"
