--- a/UF1_Proyecto_compose/app/src/main/AndroidManifest.xml
+++ b/UF1_Proyecto_compose/app/src/main/AndroidManifest.xml
@@ -17,10 +17,8 @@
         android:windowSoftInputMode="adjustResize"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.AuthActivity"
-            android:exported="false" />
-        <activity
             android:name=".presentation.screens.MainActivity"
+            android:windowSoftInputMode="adjustResize"
             android:exported="true"
             android:theme="@style/Theme.UF1_Proyecto_compose">
             <intent-filter>
